# Daily-Feed

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mcp.json  package.json
archive/: BACKEND_FIXES_COMPLETE.md  BACKEND_ISSUES.md  BACKEND_STATUS.md  CODE_REVIEW.md  FIXES_APPLIED.md
backend/: .env.example  .gitignore  README.md  alembic.ini  debug_agent.py  debug_import.py  main.py  pyproject.toml  requirements.txt  voice_assistant.py
backend/alembic/: README  env.py
backend/app/: __init__.py  config.py  database.py
backend/app/agents/: __init__.py  critic.py  delivery.py  retriever.py  summarizer.py
backend/app/ai/: __init__.py  agents.py  graphs.py  llm.py  models.py  orchestrator.py
backend/app/api/: auth_routes.py  deps.py  routes.py  routes_v2.py  user_routes.py  voice_routes.py
backend/app/core/: agent_loop.py  auth.py  config_manager.py  llm_client.py  logging_config.py  memory.py  personalization.py  rate_limit.py  scheduler.py  tool_base.py
backend/app/mcp/: __main__.py  _http.py  prompts.py  resources.py  server.py
backend/app/models/: __init__.py  user.py
backend/app/tools/: __init__.py  content_extractor.py  critique_tool.py  deliver_tool.py  fetch_tool.py  memory_tool.py  summarize_tool.py
backend/app/voice/: __init__.py  assistant.py  kokoro_tts.py  search.py  stt.py  tts.py
backend/scripts/: demo_personalization.py  init_db.py  seed_demo.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_logging.py  test_personalization.py  test_scheduler.py  test_tools.py
cli/: __main__.py  api_client.py  main.py
companion/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: commands.rs  lib.rs  main.rs  shortcut.rs  tray.rs  window.rs  ws_client.rs
companion/src-tauri/src/audio/: capture.rs  mod.rs  playback.rs  wav.rs
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  (+5 more)
(+65 files in other folders)
