[package]
name = "daily-jarvis-companion"
version = "0.1.0"
description = "Daily Jarvis — Voice AI Companion"
authors = ["Daily Feed"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "daily_jarvis_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.15"
rodio = "0.19"
byteorder = "1"
base64 = "0.22"
once_cell = "1"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
